finish update_user api
